application-power/src/main/resources/template/k8s/canary-deployment.yml
# Copyright 2017 ApplicationPower.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Configuration to deploy release version of the springboot application compatible with
# Kubernetes 1.8.
#
# Example usage: kubectl create -f <this_file>
# --------------------------- Service ---------------------- #
apiVersion: v1
kind: Service
metadata:
  name: ${applicationNameLowerCase}-${version}-svc
  namespace: default
spec:
 #type: NodePort
 ports:
 - port: 8080
   targetPort: 8080
   #nodePort: 30011
 selector:
  app: ${applicationNameLowerCase}
  tier: backend
  version: ${version}
---
# --------------------------- Deployment ------------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${applicationNameLowerCase}-${version}-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: ${applicationNameLowerCase}
      tier: backend
      version: ${version}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${applicationNameLowerCase}
        tier: backend
        version: ${version}
      annotations:
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'
    spec:
      containers:
        - name: ${applicationNameLowerCase}
          image: your-registry/your-registry-project/${basePackage}/${applicationNameLowerCase}:1.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 100Mi
            limits:
              cpu: 1
              memory: 100Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 45
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: harbor-key
