application-power/src/main/resources/template/k8s/canary-ingress.yml
# Used for Grayscale deployment
# --------------------------- ingress,k8s 1.13---------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "new"
  labels:
    app: ${applicationNameLowerCase}
    version: ${version}
  name: ${applicationNameLowerCase}-${handleVersion}-canary-ingress
  namespace: default
spec:
  rules:
  - host: your host
    http:
      #port: 80
      paths:
      - path: /your_path
        backend:
          serviceName: ${applicationNameLowerCase}-${handleVersion}-svc
          servicePort: 8080
---
