application-power/src/main/resources/template/k8s/canary-to-prod-ingress.yml
# canary to prod ingress
# --------------------------- ingress,k8s 1.13---------------------- #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: ${applicationNameLowerCase}
    version: ${version}
  name: ${applicationNameLowerCase}-${version}-ingress
  namespace: default
spec:
  rules:
  - http:
      #port: 80
      paths:
      - path: /your_path
        backend:
          serviceName: ${applicationNameLowerCase}-${version}-svc
          servicePort: 8080
---
